# tap-on24

./: .cursorignore  .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt  setup.py
tap_google_ad_manager/: client.py
tap_on24/: __init__.py  client.py  streams.py  tap.py
