[tool.poetry]
name = "tap-on24"
version = "0.0.1"
description = "`tap-on24` is a Singer tap for Monday, built with the Meltano SDK for Singer Taps."
authors = ["Maksim Sundukov"]
keywords = [
    "ELT",
    "Monday",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "==2.32.2"
singer-sdk = { version="~=0.43.1" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_on24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-on24 = 'tap_on24.tap:TapMonday.cli'
